# mohaus

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  README.md  flake.nix  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml
crates/mohaus-cli/: Cargo.toml
crates/mohaus-cli/src/: lib.rs  main.rs
crates/mohaus-core/: Cargo.toml
crates/mohaus-core/src/: build.rs  config.rs  editable.rs  error.rs  lib.rs  log.rs  pyproject_edit.rs  python_info.rs  sdist.rs  stub.rs  toolchain.rs  wheel.rs
crates/mohaus-core/tests/: fixture_args.rs  pure_wheel.rs
crates/mohaus-mojo-bindings/: Cargo.toml
crates/mohaus-mojo-bindings/src/: lib.rs
crates/mohaus-mojo-syntax/: Cargo.toml
crates/mohaus-mojo-syntax/src/: lib.rs
crates/mohaus-pep517/: Cargo.toml
crates/mohaus-pep517/src/: lib.rs
crates/mohaus-scaffold/: Cargo.toml
crates/mohaus-scaffold/src/: lib.rs
crates/mohaus-scaffold/src/templates/: LICENSE.tmpl  README.md.tmpl  gitignore.tmpl  pyproject.toml.tmpl
crates/mohaus-stubgen/: Cargo.toml
crates/mohaus-stubgen/src/: lib.rs
python/mohaus/: __init__.py  __main__.py  _cli.py  _dispatch.py  _editable.py  backend.py
python/mohaus_mojo/: LICENSE  README.md  __init__.py  pyproject.toml
scripts/: build_simple_index.py  stage_mohaus_mojo_assets.py
src/: README.md
src/mohaus_hashing/: __init__.mojo  _sha256.mojo
src/mohaus_scaffold/: __init__.mojo
src/mohaus_scaffold/templates/: README.md.tmpl  flake.nix.tmpl  pyproject.toml.tmpl
src/mohaus_stubgen/: __init__.mojo
src/mohaus_toolchain/: __init__.mojo
src/tests/: test_hashing.mojo  test_scaffold.mojo  test_sha256_kat.mojo  test_stubgen.mojo  test_toolchain.mojo
tests/fixtures/multi_module/: pyproject.toml
tests/fixtures/multi_module/python/multi_module/: __init__.py
tests/fixtures/multi_module/src/: extra.mojo  lib.mojo
tests/fixtures/with_include_paths/: README.md  pyproject.toml
tests/fixtures/with_include_paths/python/include_demo/: __init__.py
tests/fixtures/with_include_paths/src/: lib.mojo
tests/parity/: _mojo_hash_runner.mojo  run_source_hash_parity.py
tests/python/: test_backend_shape.py  test_cli_self_find_links.py  test_dispatch.py  test_editable_guard.py
