[workspace]
members = [
  "crates/mohaus-cli",
  "crates/mohaus-core",
  "crates/mohaus-pep517",
  "crates/mohaus-scaffold",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Aaron Pham"]
license = "Apache-2.0"
repository = "https://github.com/aarnphm/mohaus"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
flate2 = "1.1"
fs4 = { version = "0.13", features = ["sync"] }
notify = "8.2"
notify-debouncer-mini = "0.7"
pyo3 = { version = "0.27", features = ["abi3-py311", "extension-module"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tar = "0.4"
tempfile = "3.23"
thiserror = "2.0"
toml = "0.9"
walkdir = "2.5"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
missing_errors_doc = "warn"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unwrap_used = "deny"
