[package]
name = "mohaus-cli"
description = "Command-line interface for mohaus."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mohaus"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
mohaus-core = { path = "../mohaus-core" }
mohaus-scaffold = { path = "../mohaus-scaffold" }
notify.workspace = true
notify-debouncer-mini.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
