[package]
name = "mohaus-core"
description = "Core build, metadata, toolchain, wheel, sdist, and editable logic for mohaus."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
flate2.workspace = true
fs4.workspace = true
serde.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
