[package]
name = "mohaus-mojo-bindings"
description = "Clean-room Mojo source graph and Python binding analyzer for mohaus."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mohaus-mojo-syntax.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
