[package]
name = "mohaus-scaffold"
description = "Project scaffolding templates for mohaus."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mohaus-core = { path = "../mohaus-core" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
