[build-system]
requires = ["mohaus>=0.1,<0.2"]
build-backend = "mohaus.backend"

[project]
name = "mohaus-mojo"
version = "0.1.0"
description = "Mojo parity ports of mohaus build primitives (toolchain, hashing, scaffold)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Aaron Pham" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
]
keywords = ["mojo", "packaging", "pep517", "python"]

[project.urls]
Repository = "https://github.com/aarnphm/mohaus"

[tool.mohaus]
pure = true
python-src = ".."
