[build-system]
requires = ["mohaus>=0.1,<0.2"]
build-backend = "mohaus.backend"

[project]
name = "include_demo"
version = "0.1.0"
description = "Fixture with -I include paths"
requires-python = ">=3.11"
authors = [{ name = "Aaron", email = "a@example.com" }]
license = "Apache-2.0"
keywords = ["mojo", "python"]
classifiers = ["Programming Language :: Rust"]
dependencies = ["numpy>=1"]

[project.urls]
Source = "https://example.com/include_demo"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
include-demo = "include_demo._cli:main"

[tool.mohaus]
mojo-src = "src"
python-src = "python"
module-name = "include_demo._native"
mojo-include-paths = ["vendor"]
